--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 
 <meta charset="UTF-8">
 <title>Crunchii</title>
+<style>
+  h1{
+    margin: 0 auto;
+    color: #4498E9;
+    
+  } 
+  
 
+ </style>
 
 </head>
 <body>
-<h1>Hello there ;)</h1>
+<h1 >Hello there ;)</h1>
 </body>
